--- a/style.css
+++ b/style.css
@@ -74,8 +74,12 @@
     transition: transform 0.7s;
     transform-style: preserve-3d;
   }
-  
+
   .tarjeta-frente {
+    text-align: center;
+  }
+  
+  .tarjeta-frente, .tarjeta-atras {
     width: 100%;
     height: 90%;
     backface-visibility: hidden;
@@ -85,16 +89,6 @@
     text-align: center;
     justify-content: center;
     align-items: center;
-  }
-  
-  .tarjeta-atras {
-    width: 100%;
-    height: 90%;
-    backface-visibility: hidden;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background: white;
   }
   
   .tarjeta-atras {
